Correcting .brand alignment in navbar-fixed-* when used with .container-fluid

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -214,6 +214,14 @@
   }
 }
 
+// Fixed navbar's brand needs no left margin, so that it aligns with text inside a .container-fluid
+.navbar-fixed-top,
+.navbar-fixed-bottom {
+  .brand {
+    margin-left: 0;
+  }
+}
+
 
 
 // NAVIGATION
